-issue#1608: Possible boost race conditions
-issue#1609: Remote pollers update 'stats_poller' on main poller
-issue#1617: Editing a data query results in missing $header variable
-issue#1621: Realtime Popup can cause automatic logout
-issue#1626: httpd-error.log have message about Fontconfig
-issue#1634: Default snmp quick print setting resulting in false poller ASSERTS on some php releases
-issue#1655: Correct Cacti to handle new MySQL 8.0 reserved word `system`
-issue#1658: Devices drop down should be filtered by Site
-issue#1660: Reports based upon Tree don't maintain graph order
-issue#1665: Must change password not working for local users when main realm is not local
-issue#1669: Console log header grammar issue
-issue#1674: Threads and Processes values not migrated to Poller table during upgrade
-issue#1676: Allow automation discovery to add the same sysname on different hosts
-issue#1682: Slow Select Statement lib/api_automation.php
-issue#1689: Technical Support's RRDTool version should show detected RRD version
-issue#1690: Report a warning if the default collation is not utf8mb4_unicode_ci
-issue#1700: Mail sent without auth causes errors to appear in logs
-issue#1710: RRDtool create command causes first update to fail
-issue#1721: Console Side Bar not correct on first login
-issue#1723: die() messages should include PHP_EOF for better logging
-issue#1726: Poor page performance editing a Graphs Graph Items
-issue#1746: Poller with no hosts does not exit until timeout is reached
-issue#1761: Graph Management page shows bogus template names
-issue#1783: Browser Back button still does not working
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-feature#122: Support a Site Branch Type